--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 
-# Created by https://www.toptal.com/developers/gitignore/api/vim,git,macos,windows,sublimetext,visualstudiocode
-# Edit at https://www.toptal.com/developers/gitignore?templates=vim,git,macos,windows,sublimetext,visualstudiocode
+# Created by https://www.toptal.com/developers/gitignore/api/vim,git,macos,windows,linux,sublimetext,visualstudiocode,go
+# Edit at https://www.toptal.com/developers/gitignore?templates=vim,git,macos,windows,linux,sublimetext,visualstudiocode,go
 
 ### Git ###
 # Created by git for backups. To disable backups in Git:
@@ -17,6 +17,42 @@
 *_LOCAL_*.txt
 *_REMOTE_*.txt
 
+### Go ###
+# Binaries for programs and plugins
+*.exe
+*.exe~
+*.dll
+*.so
+*.dylib
+
+# Test binary, built with `go test -c`
+*.test
+
+# Output of the go coverage tool, specifically when used with LiteIDE
+*.out
+
+# Dependency directories (remove the comment below to include it)
+# vendor/
+
+### Go Patch ###
+/vendor/
+/Godeps/
+
+### Linux ###
+*~
+
+# temporary files which can be created if a process still has a handle open of a deleted file
+.fuse_hidden*
+
+# KDE directory preferences
+.directory
+
+# Linux trash folder which might appear on any partition or disk
+.Trash-*
+
+# .nfs files are created when an open file is removed but is still being accessed
+.nfs*
+
 ### macOS ###
 # General
 .DS_Store
@@ -24,7 +60,7 @@
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
 
 # Thumbnails
 ._*
@@ -92,7 +128,6 @@ Sessionx.vim
 
 # Temporary
 .netrwhist
-*~
 # Auto-generated tag files
 tags
 # Persistent undo
@@ -137,4 +172,4 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
-# End of https://www.toptal.com/developers/gitignore/api/vim,git,macos,windows,sublimetext,visualstudiocode
+# End of https://www.toptal.com/developers/gitignore/api/vim,git,macos,windows,linux,sublimetext,visualstudiocode,go
