refactor: healthcheck, release and docker

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+healthcheck
 
 # Created by https://www.toptal.com/developers/gitignore/api/vim,git,macos,windows,linux,sublimetext,visualstudiocode,go
 # Edit at https://www.toptal.com/developers/gitignore?templates=vim,git,macos,windows,linux,sublimetext,visualstudiocode,go
