--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,9 @@
-name: Continuous Integration
+name: continuous-integration
 
 on:
   push:
     branches:
-      - main
+      - develop
 
 jobs:
   golanglint:
@@ -25,61 +25,3 @@ jobs:
       - uses: actions/checkout@v2.3.4
       - name: Hadolint with reviewdog
         uses: reviewdog/action-hadolint@v1.19
-
-  build-and-release:
-    runs-on: ubuntu-20.04
-    needs:
-      - golanglint
-      - dockerfilelint
-    steps:
-      -
-        name: Checkout code
-        uses: actions/checkout@v2.3.4
-
-      -
-        name: Docker meta
-        id: docker_meta
-        uses: crazy-max/ghaction-docker-meta@v2.4.0
-        with:
-          images: ombratteng/healthcheck-next
-
-      -
-        name: Set up Docker Buildx
-        id: buildx
-        uses: docker/setup-buildx-action@v1.3.0
-        with:
-          install: true
-
-      -
-        name: Cache Docker layers
-        uses: actions/cache@v2.1.5
-        with:
-          path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-buildx-${{ github.sha }}
-          restore-keys: |
-            ${{ runner.os }}-buildx
-
-      -
-        name: Login to DockerHub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      # -
-      #   name: Build and push
-      #   id: docker_build
-      #   uses: docker/build-push-action@v2
-      #   with:
-      #     push: true
-      #     builder: ${{ steps.buildx.outputs.name }}
-      #     tags: ${{ steps.docker_meta.outputs.tags }}
-      #     labels: ${{ steps.docker_meta.outputs.labels }}
-      #     cache-from: type=local,src=/tmp/.buildx-cache
-      #     cache-to: type=local,dest=/tmp/.buildx-cache-new
-
-      # -
-      #   name: Move cache
-      #   run: |
-      #     rm -rf /tmp/.buildx-cache
-      #     mv /tmp/.buildx-cache-new /tmp/.buildx-cache
