--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,7 +18,9 @@ jobs:
         id: docker_meta
         uses: docker/metadata-action@v3
         with:
-          images: bratteng/healthcheck-next
+          images: |
+            ghcr.io/bratteng/healthcheck-next
+            bratteng/healthcheck-next
           flavor: |
             latest=true
           tags: |
@@ -39,6 +41,14 @@ jobs:
           key: ${{ runner.os }}-buildx-${{ github.sha }}
           restore-keys: |
             ${{ runner.os }}-buildx
+
+      -
+        name: Login to GitHub Container Registry
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.CR_PAT }}
 
       -
         name: Login to DockerHub
