--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,6 +8,18 @@ on:
 jobs:
   build-and-release:
     runs-on: ubuntu-20.04
+    name: "[${{matrix.flavor}}] Build and release"
+    strategy:
+      fail-fast: true
+      matrix:
+        include:
+          -
+            flavor: buster
+            latest: true
+
+          -
+            flavor: alpine
+            latest: false
     steps:
       -
         name: Checkout code
@@ -18,13 +30,15 @@ jobs:
         id: docker_meta
         uses: docker/metadata-action@v3
         with:
+          labels: |
+            org.opencontainers.image.description=Healthcheck binary specific for Next.js [${{matrix.flavor}}]
           images: |
             ghcr.io/bratteng/healthcheck-next
             bratteng/healthcheck-next
           flavor: |
-            latest=true
+            latest=${{matrix.latest}}
           tags: |
-            type=sha
+            type=raw,value=${{matrix.flavor}}
 
       -
         name: Set up Docker Buildx
@@ -38,9 +52,10 @@ jobs:
         uses: actions/cache@v2.1.6
         with:
           path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-buildx-${{ github.sha }}
+          key: ${{ runner.os }}-${{ matrix.flavor }}-buildx-${{ github.sha }}
           restore-keys: |
-            ${{ runner.os }}-buildx
+            ${{ runner.os }}-${{ matrix.flavor }}-buildx
+            ${{ runner.os }}-${{ matrix.flavor }}-
 
       -
         name: Login to GitHub Container Registry
@@ -48,7 +63,7 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
-          password: ${{ secrets.CR_PAT }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       -
         name: Login to DockerHub
@@ -63,6 +78,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
+          file: Dockerfile.${{ matrix.flavor }}
           builder: ${{ steps.buildx.outputs.name }}
           tags: ${{ steps.docker_meta.outputs.tags }}
           labels: ${{ steps.docker_meta.outputs.labels }}
