--- a/Dockerfile.alpine
+++ b/Dockerfile.alpine
@@ -1,5 +1,5 @@
 # image used for the healthcheck binary
-FROM golang:1.16.4-alpine3.13
+FROM golang:1.16.4-alpine3.13 AS build
 WORKDIR /go/src/healthcheck/
 
 COPY healthcheck.go .
@@ -7,3 +7,6 @@ COPY go.mod .
 COPY go.sum .
 
 RUN CGO_ENABLED=0 go build -ldflags '-w -s -extldflags "-static"' -o /healthcheck /go/src/healthcheck/
+
+FROM alpine:3.13
+COPY --from=build /healthcheck /healthcheck
